<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EventConnect</string>
    <string name="register_button_text">Register</string>
    <string name="login_button_text">Login</string>
    <string name="msg_fields_required">Please complete all fields</string>
    <string name="msg_successful_registration">Successful registration</string>
    <string name="msg_invalid_email">The email address is not correct</string>
    <string name="msg_invalid_password">The password must be at least 6 characters long, containing at least one letter and one number</string>
    <string name="msg_invalid_phone">The phone number is not correct</string>
    <string name="msg_registration_error">Error registering user</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="msg_user_already_exists">The user already exists</string>
    <string name="msg_verification_email_sent">Verification email sent. Please check your email</string>
    <string name="msg_verification_email_error">Error sending verification email. Please try again later</string>
    <string name="forgot_password">Forgotten password?</string>
    <string name="not_registered">Not registered yet?</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="msg_successful_login">Successful login</string>
    <string name="msg_verify_email_for_login">Check your email address to log in</string>
    <string name="msg_login_error">Login error. Check your credentials</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="reset">Reset</string>
    <string name="enter_your_email_2">Please enter your email address</string>
    <string name="reset_email_sent">A reset email has been sent</string>
    <string name="reset_email_error">Error sending password reset email</string>
    <string name="default_web_client_id" translatable="false">AIzaSyBBA-HlXi2wa70kGFhl12Vgwnj75bB6bBw</string>
    <string name="msg_google_sign_in_failed">Failed to sign in with Google. Please try again</string>
    <string name="msg_successful_google_sign_in">Google Sign-In successful. Welcome!</string>
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close Drawer</string>
    <string name="search_hint">Search for events</string>
    <string name="like">Like</string>
    <string name="my_tickets">My tickets</string>
    <string name="logout_success">Logout successful</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirm_delete_account">Are you sure you want to delete your account?</string>
    <string name="delete">Delete</string>
    <string name="account_deleted_success">Account deleted successfully</string>
    <string name="cancel">Cancel</string>
    <string name="get_tickets">Get Tickets</string>
    <string name="yes">Yes</string>
    <string name="not">Not</string>
    <string name="access_to_buy_ticket">Do you want to access to buy the ticket?</string>
    <string name="add_event">Add Event</string>
    <string name="city">City</string>
    <string name="place">Place</string>
    <string name="date">Date</string>
    <string name="information">Information</string>
    <string name="link">Link</string>
    <string name="add_button_text">Add</string>
    <string name="event_added_success">Event added successfully</string>
    <string name="event_add_error">Error adding event</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="image">Image</string>
    <string name="select_image">Select Image</string>
    <string name="profile_photo_updated_success">Profile photo updated successfully</string>
    <string name="about_this_event">About this event</string>
    <string name="location">Location</string>
    <string name="google_maps_not_installed">Google Maps is not installed on your device</string>
    <string name="read_less">Read Less</string>
    <string name="read_more">Read More</string>
    <string name="notifications_disabled">Notifications disabled</string>
    <string name="notifications_disabled_message">Notifications for this app are disabled. Would you like to enable them now?</string>
    <string name="share_app">Share app</string>
    <string name="recommendation_message">I recommend this amazing app!</string>
    <string name="share_via">Share via</string>
    <string name="settings">Settings</string>
    <string name="suggestions">Suggestions</string>
    <string name="faqs">FAQs</string>
    <string name="notifications">Notifications</string>
    <string name="rate_our_app">Rate our app</string>
    <string name="share_our_app">Share our app</string>
    <string name="general">General</string>
    <string name="change_language">Change Language</string>
    <string name="legal_terms">Legal Terms</string>
    <string name="follow_us_on">Follow us on</string>
    <string name="contact_us">Contact us</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="delete_my_account">Delete my account</string>
    <string name="confirm_logout">Are you sure you want to logout?</string>
    <string name="delete_event">Delete Event</string>
    <string name="delete_event_error">Error deleting event.</string>
    <string name="event_deleted_success">Event deleted successfully.</string>
    <string name="confirm_delete_event">¿Estás seguro de que deseas borrar este evento?</string>
</resources>