<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.AdminEventFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageEvento"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop" />
            <TextView
                android:id="@+id/fechaEvento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:gravity="left"
                android:padding="16dp" />
            <TextView
                android:id="@+id/nombreEvento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                android:gravity="center"
                android:padding="16dp" />


            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/infoEventoText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="16dp"
                android:text="@string/about_this_event"
                android:textSize="24sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/infoEvento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:gravity="left"
                android:padding="16dp"
                android:maxLines="2"
                android:ellipsize="end"/>
            <TextView
                android:id="@+id/readMoreText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read_more"
                android:padding="16dp"
                android:clickable="true"
                android:textColor="@color/color_principal"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:textStyle="bold"/>
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/lugarEventoText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="16dp"
                android:text="@string/location"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lugarEvento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:gravity="left"
                android:padding="16dp"
                android:drawableStart="@drawable/ic_location"
                android:drawablePadding="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnOpenMap"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:foreground="@drawable/google_maps"
                    android:gravity="center"
                    android:textSize="16sp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>